--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,13 @@
     transform: rotate(360deg);
   }
 }
+
+.days-react {
+  width: 300px;
+  background-color: #61dafb;
+  text-align: center;
+  padding: 16px;
+  font-size: 24px;
+  font-weight: 500;
+  transition-duration: 500ms;
+}
